# cargo-run-copy

./: Cargo.toml  README.ja.md  README.md
.github/workflows/: ci.yml
.note/: add-build-run-from-subcommands.md  write-readme.md
src/: lib.rs  main.rs  tests.rs
